force-app/main/default/objects/Submission_Form_Event__e/Submission_Form_Event__e.object-meta.xml
<CustomObject>
    <label>Submission Form Event</label>
    <pluralLabel>Submission Form Events</pluralLabel>
</CustomObject>