force-app/main/default/objects/Submission_Form_Event__e/fields/New_Build_Bank_Owned__c.field-meta.xml
<CustomField>
    <fullName>New_Build_Bank_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Build/Bank Owned?</label>
    <type>Checkbox</type>
</CustomField>