force-app/main/default/objects/Submission_Form_Event__e/fields/Rate_Lock_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Lock_Exp_Date__c</fullName>
    <label>Rate Lock Exp Date</label>
    <type>Date</type>
</CustomField>