force-app/main/default/objects/Submission_Form_Event__e/fields/Rate_Lock_Status__c.field-meta.xml
<CustomField>
    <fullName>Rate_Lock_Status__c</fullName>
    <label>Rate Lock Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>